# Customer-Support-Agent

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  env.example  main.py  pytest.ini  requirements.txt
backend/intelligagent/: __init__.py
backend/intelligagent/api/: tickets.py  users.py
backend/intelligagent/core/: config.py
backend/intelligagent/db/: database.py  models.py
backend/intelligagent/schemas/: __init__.py  comment.py  ticket.py  user.py
backend/intelligagent/services/: ticket_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 90f312822d4b_create_initial_tables_users_tickets_.py
backend/tests/: __init__.py  conftest.py  test_user_service.py
docs/: SETUP_PROGRESS.md  idea_1.docx
docs/phase_1_docs/: README.md
scripts/: init-db.sql
